# danone-xtab

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README copy.md  README.md  create_veracode_package.sh  pytest.ini  veracode-static-scan-package.yml
docker/services/execution/widget_factory_lite_module/: .gitignore  Installation.md  Readme.md  pyproject.toml  release-notes.md  requirements.txt  sample_runpy_code.py
docker/services/execution/widget_factory_lite_module/codex_widget_factory_lite/: __init__.py  config.py
docker/services/execution/widget_factory_lite_module/codex_widget_factory_lite/conversion_utils/: __init__.py  base_conversion.py  base_screen_action.py
docker/services/execution/widget_factory_lite_module/codex_widget_factory_lite/data_connectors/: __init__.py  file_system.py  sql_database.py
docker/services/execution/widget_factory_lite_module/codex_widget_factory_lite/docs/: analyze_simulator.md  carousel.md  compare_scenario.md  compare_scenario_table.md  custom_notification.md  dsstore_artifacts.md  dynamic_form.md  expandable_table.md  filter.md  graph.md  grid_table.md  ingestion_file_system.md  ingestion_sql.md  insights.md  metric.md  screen_actions_button_generator.md  screen_actions_download_link_generator.md  screen_actions_handler.md  (+11 more)
docker/services/genai-utils/nuclios_inference/: pyproject.toml
docker/services/genai-utils/nuclios_inference/cookbook/: RetrivalAQ_pinecone.ipynb  embeddings.ipynb  inferencing.ipynb
docker/services/genai-utils/nuclios_inference/nuclios_inference/: .gitignore  __init__.py  client.py
(+4599 files in other folders)
